Task#7189 - fixed homepage slider overflow

--- a/sites/all/themes/slac/sass/blocks.scss
+++ b/sites/all/themes/slac/sass/blocks.scss
@@ -398,7 +398,9 @@ a.submit-feedback {
 }
 
 .views-slideshow-cycle-main-frame {
+  overflow: hidden;
   max-width: 100%;
+  background-color: #fff;
   div {
     max-width: 100%;
   }
